@@ -77,6 +77,8 @@ class Exception(BaseEvent):
                 lambda k, v: shorten(v),
                 get_stack_info(
                     iter_traceback_frames(exc_traceback),
+                    with_locals=client.config.collect_local_variables in ('errors', 'all'),
+                    with_source_context=client.config.collect_source in ('errors', 'all'),
                     include_paths_re=client.include_paths_re,
                     exclude_paths_re=client.exclude_paths_re,
                 )
