@@ -13,7 +13,9 @@
 https://github.com/elastic/apm-agent-python/compare/v1.0.0\...master[Check the HEAD diff]
 
  * moved the library-frame detection from a processor to the stacktrace collection ({pull}113[#113]).
-
+ * added settings to enable/disable source code collection and local variables collection
+   for errors and transactions ({pull}117[#117])
+   
 [[release-1.0.0]]
 [float]
 === v1.0.0
